--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>GeoAR.js demo</title>
+    <title>GPS_AR</title>
     <script src="js/aframe.min.js"></script>
     <script src="js/aframe.lookat.js"></script>
     <script src="js/aframe.ar.js"></script>
@@ -18,7 +18,7 @@
         value="This content will always face you."
         look-at="[gps-camera]"
         scale="120 120 120"
-        gps-entity-place="latitude: 104.067971; longitude: 30.548987;"
+        gps-entity-place="latitude: 104.0774793139; longitude: 30.553819701464;"
       ></a-text>
       <a-camera gps-camera rotation-reader> </a-camera>
     </a-scene>
