--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         value="This content will always face you."
         look-at="[gps-camera]"
         scale="120 120 120"
-        gps-entity-place="latitude: 104.0774793139; longitude: 30.553819701464;"
+        gps-entity-place="latitude: 104.0774793139; longitude: 30.553819701464"
       ></a-text>
       <a-camera gps-camera rotation-reader> </a-camera>
     </a-scene>
