--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         scale="120 120 120"
         gps-entity-place="latitude: 104.0774793139; longitude: 30.553819701464"
       ></a-text>
-      <a-camera gps-camera rotation-reader> </a-camera>
+      <a-camera gps-camera="simulateLatitude: 104.0774793139;simulateLongitude:30.553819701464" rotation-reader  > </a-camera>
     </a-scene>
   </body>
 </html>
