--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
       arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: true;"
     >
       <a-text
-        value="XiaKeDao"
-        look-at="[mainCamera]"
+        value=" Welcome to Hicoffice"
+        look-at="[gps-camera]"
         scale="120 120 120"
         gps-entity-place="latitude: 104.0774793139; longitude: 30.553819701464"
       ></a-text>
 
       
-      <a-camera id="mainCamera" gps-camera="simulateLatitude: 104.0774793139;simulateLongitude:30.553819701464" rotation-reader  > </a-camera>
+      <a-camera   gps-camera="simulateLatitude: 104.0774793139;simulateLongitude:30.553819701464" rotation-reader  > </a-camera>
     </a-scene>
   </body>
 </html>
