--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
       ></a-box>
 
       
-      <a-camera   gps-camera="simulateLatitude: 104.06533772391775;simulateLongitude:30.550837978743637" rotation-reader  > </a-camera>
+      <!--<a-camera   gps-camera="simulateLatitude: 104.06533772391775;simulateLongitude:30.550837978743637" rotation-reader  > </a-camera> -->
+      <a-camera   gps-camera rotation-reader  > </a-camera>
     </a-scene>
 
     <div class="panel">
