--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
       
       <!--<a-camera   gps-camera="simulateLatitude: 104.06533772391775;simulateLongitude:30.550837978743637" rotation-reader  > </a-camera> -->
-      <a-camera   gps-camera rotation-reader  > </a-camera>
+      <a-camera   gps-camera  look-controls-enabled='false' arjs-look-controls='smoothingFactor: 0.1' gps-camera='gpsMinDistance: 5' rotation-reader  > </a-camera>
     </a-scene>
 
     <div class="panel">
