--- a/index.html
+++ b/index.html
@@ -63,13 +63,14 @@
 
       <a-box
         color="red"
+        gps-projected-entity-place="latitude: 104.06522918908374; longitude: 30.550839694390927"
         gps-entity-place="latitude: 104.06522918908374; longitude: 30.550839694390927"
         depth="1" height="1" width="1"
       ></a-box>
 
       
       <!--<a-camera   gps-camera="simulateLatitude: 104.06533772391775;simulateLongitude:30.550837978743637" rotation-reader  > </a-camera> -->
-      <a-camera   gps-camera  look-controls-enabled='false' arjs-look-controls='smoothingFactor: 0.1' gps-camera='gpsMinDistance: 5' rotation-reader  > </a-camera>
+      <a-camera   gps-projected-camera  look-controls-enabled='false' arjs-look-controls='smoothingFactor: 0.1' gps-camera='gpsMinDistance: 5' rotation-reader  > </a-camera>
     </a-scene>
 
     <div class="panel">
