--- a/index.html
+++ b/index.html
@@ -68,6 +68,23 @@
         depth="1" height="1" width="1"
       ></a-box>
 
+      <a-box
+        color="blue"
+        gps-projected-entity-place="latitude: 104.06493155792882; longitude:30.550799442919338"
+        gps-entity-place="latitude: 104.06493155792882; longitude:30.550799442919338"
+        depth="1" height="1" width="1"
+      ></a-box>
+
+      <a-box
+        color="yellow"
+        gps-projected-entity-place="latitude: 104.0646058529557,; longitude:30.550798202761474"
+        gps-entity-place="latitude: 104.0646058529557; longitude: 30.550798202761474"
+        depth="1" height="1" width="1"
+      ></a-box>
+
+
+      ,
+
       
       <!--<a-camera   gps-camera="simulateLatitude: 104.06533772391775;simulateLongitude:30.550837978743637" rotation-reader  > </a-camera> -->
       <a-camera   gps-projected-camera  look-controls-enabled='false' arjs-look-controls='smoothingFactor: 0.1' gps-camera='gpsMinDistance: 5' rotation-reader  > </a-camera>
