--- a/loc.html
+++ b/loc.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>GPS_AR</title>
+    <style>
+        * {width: 99%;}
+        body{padding:1em}
+    </style>
 
 </head>
 <body>
@@ -12,7 +16,7 @@
     <button id="getLoc">Get Location</button>
 
     <br/>
-    <textarea id="loc"></textarea>
+    <textarea id="loc" rows="20"></textarea>
 
     <script>
         window.onload = function () {
