--- a/loc.html
+++ b/loc.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>GPS_AR</title>
     <style>
-        * {width: 99%;}
-        body{padding:1em}
+        button,textarea {width: 100%;}
+        body{margin:1em}
     </style>
 
 </head>
