--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     }
 
     window.addEventListener('deviceorientation', function(e){
-      setInfo('absolute: ' + e.absolute+';alpha: ' + e.alpha+';beta: ' + e.beta+';gamma: ' + e.gamma)
+      setInfo('absolute: ' + e.absolute+';<br/>alpha: ' + e.alpha+';<br/> beta: ' + e.beta+';<br/>gamma: ' + e.gamma)
   }, false);
 
   </script>
