--- a/index.html
+++ b/index.html
@@ -340,6 +340,7 @@
           cursor:'pointer',
           clickable: true
         })
+        currentPosMarker.setMap(map)
 
         setInfo({
           heading: position.coords.heading,
@@ -419,6 +420,7 @@
           cursor:'pointer',
           clickable: true
         })
+        currentPosMarker.setMap(map)
       }
       
 
