--- a/index.html
+++ b/index.html
@@ -327,21 +327,6 @@
           gcoord.GCJ02
         );
 
-        currentPosMarker =  new AMap.CircleMarker({
-          center:[fromGCJ02[0],fromGCJ02[1]],
-          radius:5,
-          strokeColor:'green',
-          strokeWeight:0,
-          strokeOpacity:0.5,
-          fillColor:'green',
-          fillOpacity:0.5,
-          zIndex:500,
-          bubble:true,
-          cursor:'pointer',
-          clickable: true
-        })
-        currentPosMarker.setMap(map)
-
         setInfo({
           heading: position.coords.heading,
           lng: position.coords.longitude,
@@ -404,8 +389,10 @@
           gcoord.GCJ02
         );
 
+        
+
       if(currentPosMarker != null){
-        currentPosMarker.center = [fromGCJ02[0],fromGCJ02[1]] 
+        map.remove(currentPosMarker)
       }else{
         currentPosMarker =  new AMap.CircleMarker({
           center:[fromGCJ02[0],fromGCJ02[1]],
