--- a/index.html
+++ b/index.html
@@ -342,6 +342,10 @@
         })
         currentPosMarker.setMap(map)
 
+        existMakers.push(currentPosMarker)
+
+        
+
         setInfo({
           heading: position.coords.heading,
           lng: position.coords.longitude,
