--- a/index.html
+++ b/index.html
@@ -327,6 +327,8 @@
           gcoord.GCJ02
         );
 
+        if(currentPosMarker == null) {
+
         currentPosMarker =  new AMap.CircleMarker({
           center:[fromGCJ02[0],fromGCJ02[1]],
           radius:5,
@@ -341,8 +343,8 @@
           clickable: true
         })
         currentPosMarker.setMap(map)
+      }
 
-        existMakers.push(currentPosMarker)
 
         
 
@@ -410,7 +412,7 @@
 
         setInfo("watchPosition" + fromGCJ02)
 
-        currentPosMarker.moveTo([fromGCJ02[0],fromGCJ02[1]])
+        currentPosMarker.setPosition([fromGCJ02[0],fromGCJ02[1]])
       
 
     }, function(e){
