--- a/index.html
+++ b/index.html
@@ -411,7 +411,8 @@
         );
 
         setInfo("watchPosition" + fromGCJ02)
-        currentPosMarker.setPosition([fromGCJ02[0],fromGCJ02[1]])
+        console.log(currentPosMarker)
+        currentPosMarker.setCenter([fromGCJ02[0],fromGCJ02[1]])
       
 
     }, function(e){
