--- a/amap_loc.html
+++ b/amap_loc.html
@@ -26,6 +26,11 @@
         }
         #panel button{
             margin-right:2px;
+            border:1px solid #eee;
+            color:#FFF;
+            text-shadow: #000 1px 1px 1px;
+            border-radius: 5px;
+            padding:0.5em;
         }
 
     </style>
@@ -148,7 +153,7 @@
     let text = ""
     
     for( i in markerGroup){
-        text +="<button onclick=\"toggle('"+i+"')\">"+i+"</button>"
+        text +="<button style=\"background-color:"+selectedColor[i]+"\" onclick=\"toggle('"+i+"')\">"+i+"</button>"
     }
     document.getElementById("panel").innerHTML = text
 
