--- a/amap_loc.html
+++ b/amap_loc.html
@@ -74,7 +74,8 @@
     var marker, map = new AMap.Map("container", {
         resizeEnable: true,
         center: [104.067971,30.548987],
-        zoom: 13
+        zoom: 13,
+        mapStyle:"amap://styles/light"
     });
 
     function getAssigned(projectName){
